# patmos-llvm

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile.rules  README.md  README.patmos  README.txt  TODO.Patmos  TODO.patmos  configure
.github/workflows/: build.yml
autoconf/: AutoRegen.sh  config.sub  configure.ac
autoconf/m4/: huge_val.m4  single_cxx_check.m4
bindings/ocaml/: Makefile.ocaml
ci/: README.md  build_test_llvm.sh  build_test_suite.sh  get_dependencies.sh  run_test_suite.sh
cmake/: config-ix.cmake
cmake/modules/: AddLLVM.cmake
docs/: ReleaseNotes.rst
include/llvm/: CallingConv.h  InitializePasses.h  LinkAllPasses.h  Linker.h  PML.h  PassManagers.h
include/llvm/ADT/: ArrayRef.h  Triple.h
include/llvm/Analysis/: BlockFrequencyImpl.h  InputDependenceAnalysis.h  LoopInfo.h  Passes.h
include/llvm/Bitcode/: Archive.h
include/llvm/CodeGen/: AggressiveAntiDepBreaker.h  AntiDepBreaker.h  AsmPrinter.h  CriticalAntiDepBreaker.h  ISDOpcodes.h  LexicalScopes.h  MachineBasicBlock.h  MachineBranchProbabilityInfo.h  MachineFunctionAnalysis.h  MachineModuleInfo.h  MachineModulePass.h  MachinePostDominators.h  PML.h  PMLExport.h  PMLImport.h  Passes.h  ScheduleDAGInstrs.h
include/llvm/Config/: config.h.cmake  config.h.in
include/llvm/IR/: Attributes.h  Function.h  Intrinsics.td  LegacyPassManagers.h
include/llvm/MC/: MCAsmInfo.h  MCAssembler.h  MCContext.h  MCDirectives.h  MCELFStreamer.h  MCELFSymbolFlags.h  MCExpr.h  MCNullStreamer.h  MCStreamer.h  MCTargetAsmParser.h
include/llvm/Object/: ELF.h  ELFObjectFile.h
include/llvm/Support/: DOTGraphTraits.h  ELF.h  GraphWriter.h  ValueHandle.h  YAMLExport.h  YAMLParser.h
include/llvm/Transforms/: Instrumentation.h  Scalar.h  WCET.h
lib/: CMakeLists.txt  LLVMBuild.txt
lib/Analysis/: Analysis.cpp  CMakeLists.txt  CodeMetrics.cpp  ConstantFolding.cpp  InputDependenceAnalysis.cpp  Makefile  WCET.cpp
lib/Analysis/InputDependence/: CMakeLists.txt  InputDataDependence.cpp  InputDataDependence.h  LLVMBuild.txt  Makefile  PHIDecisionNode.h  PIDDA.cpp
lib/Analysis/Ipet/: CMakeLists.txt  CostProvider.cpp  Ipet.cpp  Ipet.h  Makefile
lib/Analysis/WCET/: CMakeLists.txt  CostProvider.cpp  CostProvider.h  Criticality.cpp  FlowFactProvider.cpp  FlowFactProvider.h  Ipet.cpp  Ipet.h
lib/Archive/: Archive.cpp  ArchiveInternals.h  ArchiveReader.cpp  ArchiveWriter.cpp
lib/CodeGen/: AggressiveAntiDepBreaker.cpp  BranchFolding.cpp  BranchFolding.h  CMakeLists.txt  CodeGen.cpp  CriticalAntiDepBreaker.cpp  IfConversion.cpp  IntrinsicLowering.cpp  LLVMBuild.txt  LLVMTargetMachine.cpp  MachineBasicBlock.cpp  MachineBranchProbabilityInfo.cpp  MachineFunctionAnalysis.cpp  MachineInstr.cpp  MachineModuleInfo.cpp  MachineModulePass.cpp  MachineScheduler.cpp  PMLExport.cpp  PMLExportPass.cpp  PMLImport.cpp  Passes.cpp  PostRASchedulerList.cpp  PrologEpilogInserter.cpp  ScheduleDAG.cpp  ScheduleDAGInstrs.cpp  ScheduleDAGPrinter.cpp  ShrinkWrapping.cpp  StackColoring.cpp  TargetInstrInfo.cpp  TargetSchedule.cpp  YAMLExportPass.cpp
lib/CodeGen/AsmPrinter/: AsmPrinter.cpp  AsmPrinterInlineAsm.cpp  (+2 more)
lib/IR/: Attributes.cpp  LegacyPassManager.cpp  PassManager.cpp
lib/LTO/: LTOModule.cpp
lib/Linker/: Linker.cpp
lib/MC/: MCAsmInfo.cpp  MCAsmStreamer.cpp  MCAssembler.cpp  MCContext.cpp  MCELF.cpp  MCELFStreamer.cpp  MCExpr.cpp  MCMachOStreamer.cpp  MCNullStreamer.cpp  MCObjectStreamer.cpp  MCStreamer.cpp  MCSymbolELF.cpp  WinCOFFStreamer.cpp
lib/Object/: ELF.cpp
lib/Support/: Allocator.cpp  CMakeLists.txt  Compression.cpp  Path.cpp  Triple.cpp  YAMLParser.cpp
lib/Transforms/: CMakeLists.txt  Makefile
lib/Transforms/Ipet/: BBInstCnt.cpp  BBInstCnt.h  CMakeLists.txt  CostProvider.cpp  CostProvider.h  FlowFactProvider.cpp  FlowFactProvider.h  Ipet.cpp  Ipet.h  Makefile
lib/Transforms/Ipet/test/: Makefile  foo.c  hello.c
lib/Transforms/WCET/: CMakeLists.txt  CostProvider.h  Criticality.cpp  FlowFactProvider.cpp  FlowFactProvider.h  Ipet.cpp  Ipet.h  Makefile
lib/VMCore/: PassManager.cpp
projects/sample/: configure
test/BugPoint/: crash-narrowfunctiontest.ll  metadata.ll  remove_arguments_test.ll
test/Linker/: 2003-01-30-LinkerRename.ll  2003-05-31-LinkerRename.ll
test/Patmos/: README.md  lit.local.cfg
tools/: CMakeLists.txt  LLVMBuild.txt  Makefile
tools/bugpoint/: CMakeLists.txt  OptimizerDriver.cpp
tools/llvm-ar/: CMakeLists.txt  llvm_ranlib_symlink.cmake
tools/llvm-cov/: CMakeLists.txt
tools/llvm-dis/: CMakeLists.txt  LLVMBuild.txt
tools/llvm-extract/: CMakeLists.txt  LLVMBuild.txt
tools/llvm-ld/: CMakeLists.txt  LLVMBuild.txt  Optimize.cpp  llvm-ld.cpp
tools/llvm-link/: CMakeLists.txt  LLVMBuild.txt  LibraryLinker.cpp  LibraryLinker.h  llvm-link.cpp
tools/llvm-mc/: llvm-mc.cpp
tools/llvm-objdump/: llvm-objdump.cpp  llvm-objdump.h
tools/llvm-prof/: CMakeLists.txt  LLVMBuild.txt
tools/llvm-stress/: CMakeLists.txt
tools/lto/: LTOCodeGenerator.cpp  LTOModule.cpp
tools/opt/: CMakeLists.txt
tools/platin/: README.md  ROADMAP  eval-collect.rb  eval-run.sh  eval-summarize.rb  eval-table.rb  eval-trace.sh  generate_documentation.sh  install.sh  platin  platin-demo  run-benchmark  run-benchmark-sweet  run-benchmark-trace  run-tools
tools/platin/ext/patch_loads/: CMakeLists.txt  Makefile  patch_loads.c
tools/psk/: README.md  install.sh  psk  psk-analyze-trace  psk-analyze-trace.rb  psk-bench  psk-demo  psk-demo-equations  psk-demo-relation-equations  psk-extract-symbols  psk-extract-symbols.rb  psk-ff2pml  psk-merge  psk-pml2ais  psk-pml2ais.rb  psk-visualize  ruby-runner  run-benchmark  utils.rb
unittests/: CMakeLists.txt  Makefile.unittest
unittests/Patmos/: CMakeLists.txt  Makefile  PredicatedBlockTest.cpp
unittests/Patmos/SinglePath/: CMakeLists.txt  Makefile  PredicatedBlockTest.cpp
utils/: sort_includes.py
utils/TableGen/: AsmMatcherEmitter.cpp  AsmWriterEmitter.cpp  CodeGenDAGPatterns.cpp  FixedLenDecoderEmitter.cpp  SubtargetEmitter.cpp
utils/gdb/: README.txt  gdbinit
utils/release/: test-release.sh
utils/unittest/: CMakeLists.txt  LLVMBuild.txt  Makefile
(+360 files in other folders)
